openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canhappy
  labels:
    app: canhappy
spec:
  selector:
    app: canhappy
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
