openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canhappy
  labels:
    app: canhappy
spec:
  to:
    kind: Service
    name: canhappy
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
